--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ header {
 
 .tete{
     text-align: right;
-    display: inline;
+    display: inline-block;
     margin-right: 10px;
     width: 200px;
 }
@@ -16,4 +16,14 @@ h1{
     font-weight: bold;
     text-align:  left;
     color: white;
+}
+.bouton{
+    padding: 6px 0 6px 0;
+    font: bold 13px Arial;
+    background: gray;
+    color: #555;
+    border-radius: 2px;
+    width: 100px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 3px #999;
 }
